--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "typescript": "^4.5.4"
     },
     "dependencies": {
+        "@opendocs-editor/authlib": "1.0.1",
         "adm-zip": "^0.5.9",
         "axios": "^0.24.0",
         "crypto": "^1.0.1",
@@ -37,7 +38,7 @@
         "fs": "^0.0.1-security",
         "google-auth-library": "^7.11.0",
         "googleapis": "^92.0.0",
-        "mongodb": "latest",
+        "mongodb": "^4.3.1",
         "path": "^0.12.7",
         "query-string": "^7.1.0",
         "tar": "^6.1.11",
