--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "devDependencies": {
         "@node-minify/core": "^6.2.0",
         "@node-minify/google-closure-compiler": "^6.2.0",
+        "@types/body-parser": "^1.19.2",
+        "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.8",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.9.1",
         "@typescript-eslint/parser": "^5.9.1",
+        "body-parser": "^1.19.1",
+        "cookie-parser": "^1.4.6",
         "eslint": "^8.7.0",
         "nodemon": "^2.0.15",
         "prettier": "^2.5.1",
@@ -30,7 +34,6 @@
         "typescript": "^4.5.4"
     },
     "dependencies": {
-        "@opendocs-editor/authlib": "1.0.1",
         "adm-zip": "^0.5.9",
         "axios": "^0.24.0",
         "crypto": "^1.0.1",
@@ -47,7 +50,7 @@
     "scripts": {
         "start": "ts-node src/index.ts",
         "build": "yarn format && yarn fix && yarn clean && tsc -p . && node scripts/minify.js",
-        "dev": "nodemon src/index.ts",
+        "dev": "NODE_ENV=development nodemon src/index.ts",
         "format": "prettier --write .",
         "fcheck": "prettier --check .",
         "clean": "rimraf dist min",
