--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "axios": "^0.24.0",
         "crypto": "^1.0.1",
         "express": "^4.17.2",
+        "final-fs": "^1.6.1",
         "fs": "^0.0.1-security",
         "google-auth-library": "^7.11.0",
         "googleapis": "^92.0.0",
