--- a/package.json
+++ b/package.json
@@ -17,21 +17,25 @@
     "devDependencies": {
         "@node-minify/core": "^6.2.0",
         "@node-minify/google-closure-compiler": "^6.2.0",
+        "@types/adm-zip": "^0.4.34",
         "@types/body-parser": "^1.19.2",
         "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.8",
+        "@types/tar": "^6.1.1",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.9.1",
         "@typescript-eslint/parser": "^5.9.1",
         "body-parser": "^1.19.1",
         "cookie-parser": "^1.4.6",
         "eslint": "^8.7.0",
+        "fs-extra": "^10.0.0",
         "nodemon": "^2.0.15",
         "prettier": "^2.5.1",
         "rimraf": "^3.0.2",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.5.4"
+        "ts-node": "^10.5.0",
+        "typescript": "^4.5.5",
+        "utils": "^0.3.1"
     },
     "dependencies": {
         "adm-zip": "^0.5.9",
@@ -46,12 +50,13 @@
         "path": "^0.12.7",
         "query-string": "^7.1.0",
         "tar": "^6.1.11",
+        "url": "^0.11.0",
         "uuid": "^8.3.2"
     },
     "scripts": {
         "start": "ts-node src/index.ts",
-        "build": "yarn format && yarn fix && yarn clean && tsc -p . && node scripts/minify.js",
-        "dev": "NODE_ENV=development nodemon src/index.ts",
+        "build": "yarn format && yarn fix && yarn clean && tsc -p . && ts-node scripts/minify.ts",
+        "dev": "nodemon test/index.ts",
         "format": "prettier --write .",
         "fcheck": "prettier --check .",
         "clean": "rimraf dist min",
