--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
         "lint": "eslint . --ext .ts",
         "fix": "eslint . --ext .ts --fix",
         "start:prod": "yarn build && node dist/index.js",
-        "prepublish": "yarn format && yarn fix && yarn clean && tsc -p . && node scripts/minify-prepublish.js",
-        "postpublish": "node scripts/minify.js"
+        "prepublish": "yarn format && yarn fix && yarn clean && tsc -p . && node scripts/minify-prepublish.js"
     },
     "files": [
         "dist/**/*.*",
