--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/body-parser": "^1.19.2",
         "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/node": "^17.0.8",
         "@types/tar": "^6.1.1",
         "@types/uuid": "^8.3.4",
@@ -41,11 +42,14 @@
         "adm-zip": "^0.5.9",
         "axios": "^0.24.0",
         "crypto": "^1.0.1",
+        "ejs": "^3.1.6",
         "express": "^4.17.2",
         "final-fs": "^1.6.1",
         "fs": "^0.0.1-security",
+        "google": "^2.1.0",
         "google-auth-library": "^7.11.0",
-        "googleapis": "^92.0.0",
+        "googleapis": "^95.0.0",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.3.1",
         "path": "^0.12.7",
         "query-string": "^7.1.0",
@@ -70,7 +74,7 @@
         "min/**/*.*",
         "package.json",
         "src/**/*.*",
-        "test/**/*.*",
+        "test/index.ts",
         "scripts/**/*.*",
         ".eslintignore",
         ".eslintrc",
